--- a/tendenci2018/templates/testimonials/options.html
+++ b/tendenci2018/templates/testimonials/options.html
@@ -38,8 +38,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Options <span class="caret"></span></a>
         <ul class="dropdown-menu">
           {% if can_edit %}
-          <li><a href="/">
-            Edit</a></li>
+          <li><a href="{% url 'admin:testimonials_testimonial_change' opt_object.pk %}">Edit</a></li>
           {% endif %}
           {% if can_delete %}
           <li><a href="{% url 'admin:testimonials_testimonial_delete' opt_object.pk %}">Delete</a></li>
